2007-02-01  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, itpp/base/itassert.cpp, itpp/base/itassert.h:
	Improved and reorganised existing error handling macros:
	- using standard NDEBUG flag for controlling it_assert_debug()
	macro, which replaced a three-level ASSERT_LEVEL definition
	- for backward compatibility it_assert0() and it_assert1() now
	behaves the same as it_assert_debug() 
	- added new it_info() and it_info_debug() macros for printing
	information messages; it_info_debug() is also dependent on the
	NDEBUG compile-time definition
	- added it_error_msg_style() function for changing the format of
	it_assert(), it_error() and it_warning() messages; if style is set
	to Minimum, file name and line number of the error/assert/warning
	macro is not printed
	
2007-02-01  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/ldpc.cpp: Fix in the standard constructor

2007-01-31  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/ldpc.h, itpp/comm/ldpc.cpp: Added some initialization
	functions for completeness of the class hierarchy
	
2007-01-31  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/punct_convcode.h: Protected inheritance of the
	Convolutional_Code class replaced with a public one. This fixes
	the problem of assigning the Punctured_Convolutional_Code class
	object to a pointer of Channel_Code class.

	* itpp/base/gf2mat.cpp: Fixed improper reading and writing
	functions of the alist file format

2007-01-30  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, extras/itpp-config.t2t, extras/txt2man.sh,
	itpp-config.1.in, Makefile.am: Added man page for itpp-config
	script

2007-01-29  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/ldpc.cpp: Replaced long with int, since long and int
	have the same sizes on most IT++ supported architectures. If there
	is a need for 64-bit integers, (u)int64_t type should be used
	instead of long.
