@@ -1,3 +1,8 @@
+2007-02-02  Adam Piatyszek  <ediap@users.sourceforge.net>
+
+	* itpp/base/itassert.h: Fixed a small bug in the it_info_debug()
+	macro definition. Documentation improved.
+
 2007-02-01  Adam Piatyszek  <ediap@users.sourceforge.net>
 
 	* configure.ac, itpp/base/itassert.cpp, itpp/base/itassert.h:
